Fix: Addition Mobile Layout 44

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1527,9 +1527,6 @@ body {
         display: none !important;
     }
 
-    .hide-on-mobile {
-    display: none;
-    }
     /* === HERO SECTION SHRINK-TO-FIT LOGIC === */
     .desktop-hero-wrapper {
         width: 1650px;
@@ -1545,7 +1542,7 @@ body {
     
     /* Default margin for screens up to 992px (like landscape phone/tablet) */
     .main-content {
-        margin-top: -10rem !important; /* Your -5rem value */
+        margin-top: -12rem !important; /* Your -5rem value */
         
         padding-top: 1rem !important;
         margin-bottom: 0 !important;
@@ -1555,7 +1552,7 @@ body {
     /* Override for screens up to 700px (like portrait phone) */
     @media (max-width: 700px) {
         .main-content {
-            margin-top: -15rem !important; /* Your -10rem value */
+            margin-top: -18rem !important; /* Your -10rem value */
         }
     }
     /* === END HERO SECTION LOGIC === */
